added art layouts to archive

--- a/doqmeat/notebook/archive/layouts/index.html
+++ b/doqmeat/notebook/archive/layouts/index.html
@@ -11,19 +11,7 @@
 	<!-- tooltip shit -->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7/jquery.min.js"></script>
 	<script src="/!f/tooltip-jquary.js"></script>
-	<script>
-		(function($) {
-			$(document).ready(function() {
-				$("[title]").style_my_tooltips({
-					tip_follows_cursor: true,
-					tip_delay_time: 10,
-					tip_fade_speed: 20,
-					attribute: "title"
-				});
-			});
-		})(jQuery);
-
-	</script>
+	<script src="/!f/tooltip.js"></script>
 	<!--  end of tooltip shit -->
 	<style>
 		img {
@@ -35,7 +23,6 @@
 			font-size: small;
 			text-align: right;
 		}
-
 	</style>
 </head>
 
@@ -59,6 +46,11 @@
 		<img title="september 2023 / current!" src="230901-aboutv3.jpg">
 		<img title="may 2023" src="230521-aboutv2.jpg">
 		<img title="april 2023" src="230417-aboutv1.jpg">
+
+		<h2>art</h2>
+		<img src="art-v3.jpg" alt="version 3 of art page">
+		<img src="art-v2.jpg" alt="version 2 of art page">
+		<img src="art-v1.jpg" alt="version 1 of art page">
 
 		<h2>listening log</h2>
 		<img title="october 2023" src="231214-listeninglog.jpg">
