--- a/doqmeat/journal/index.css
+++ b/doqmeat/journal/index.css
@@ -226,6 +226,12 @@ button:hover {
   text-decoration: line-through;
 }
 
+@media only screen and (max-width: 1300px) {
+  #pen {
+    display: none;
+  }
+}
+
 @media only screen and (max-width: 700px) {
   #notepad {
     grid-template-columns: 25% 75%;
