--- a/doqmeat/journal/index.css
+++ b/doqmeat/journal/index.css
@@ -167,7 +167,7 @@ button:hover {
   right: 10px;
 }
 
-#memo3 {
+/* #memo3 {
   top: 67%;
   left: 10%;
   rotate: 14deg;
@@ -176,7 +176,7 @@ button:hover {
   height: 150px;
   background: url("!g/memo-picnic.jpg");
   background-size: cover;
-}
+} */
 
 #memo4 {
   top: 8%;
@@ -197,7 +197,7 @@ button:hover {
   border: none;
   overflow: hidden;
   width: 175px;
-  height: 225px;
+  height: 250px;
 }
 
 .innermemo {
