--- a/doqmeat/reading/body.css
+++ b/doqmeat/reading/body.css
@@ -14,6 +14,15 @@ h1 {
   text-align: center;
 }
 
+h2,
+h3 {
+  background: rgba(243, 228, 164, 0.736);
+}
+
+a {
+  color: rgb(173, 121, 121);
+}
+
 main,
 footer {
   margin: auto;
@@ -31,13 +40,38 @@ main {
 
 details {
   display: inline;
+  background: rgba(163, 201, 240, 0.415);
+}
+
+details > summary {
+  list-style-type: "+";
+}
+
+details[open] {
+  padding: 10px;
+}
+
+details[open] > summary {
+  list-style-type: "-";
 }
 
 details img {
   width: 48%;
+  vertical-align: middle;
 }
 
 summary {
-  display: inline;
   cursor: help;
+  color: rgb(215, 116, 116);
+}
+
+#s-m-t-tooltip {
+  max-width: 200px;
+  text-align: center;
+  z-index: 9999;
+  margin: 30px 15px 7px 12px;
+  padding: 5px;
+  border-radius: 10px;
+  color: inherit;
+  background: rgb(233, 168, 168);
 }
